# midi-renderer

./: .gitignore  README.md  pyproject.toml
docs/: analysis_json_spec.md  gpt_reconstruction_rule.yaml  gpt_spec_rules.yaml  gpt_start.md  operation_flow.md  reconstruction_workflow.md  render_spec.md  repo_structure.md  reverse_analysis_overview.md
docs/worklog/: 2026-04-19_reverse_analysis.yaml
intake/: .gitkeep
intake/analysis/: .gitkeep  tmp_doremi_piano_120_4_4_20260419T045156Z_dbedf0d8.analysis.json  tmp_kirakirahosi_guitar_131_4_4_20260419T053024Z_e03a8353.analysis.json  tmp_neko_funjatta_test_piano_120_20260419T025245Z_6adc9b89.analysis.json  tmp_neko_funjatta_test_piano_120_20260419T031454Z_254d9253.analysis.json
intake/midi/: .gitkeep  Kirakirahosi_guitar_131_4-4.mid  doremi_piano_120_4-4.mid  neko_funjatta_test_piano_120.mid
intake/reconstructed/tmp_doremi_piano_120_4_4_20260419T045156Z_dbedf0d8/: comparison.md  meta.yaml  render.yaml
intake/song_intent/: Kirakirahosi_guitar_131_4-4.song_intent.yaml  doremi_piano_120_4-4.song_intent.yaml
intake/state/: .gitkeep
scripts/: README.md  midi_to_json.py  reconstruct_from_analysis.py  run_render.py
songs/: .gitkeep
songs/neko_funjatta_test_piano_120/: meta.yaml  render.yaml
src/midi_renderer/: __init__.py  loader.py  renderer.py  resolver.py  timing.py  validator.py  writer.py
src/midi_renderer/analysis/: __init__.py  (+1 more)
tests/integration/: test_bootstrap_execution.py
tests/unit/: test_loader.py  test_midi_to_json.py  test_reconstruction.py  test_renderer.py  test_timing.py  test_validator.py
(+13 files in other folders)
